--- a/download-hub.html
+++ b/download-hub.html
@@ -2,84 +2,126 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#2C3E50" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Download Hub • Sovereign Academy</title>
   <meta name="description" content="Grab the printables, templates, and guides you need to win your case. Download and go." />
   <meta name="keywords" content="legal downloads, motion templates, printable guides, court forms, self-rep tools" />
-  <meta property="og:title" content="Download Hub - Sovereign Academy" />
-  <meta property="og:description" content="The legal toolbox you’ve been waiting for. Grab and go resources for court." />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Download Hub - Sovereign Academy" />
-  <meta name="twitter:description" content="Download forms, checklists, and templates to power your court fight." />
-  <title>Download Hub - Sovereign Academy</title>
+  <meta name="theme-color" content="#0b0b0b" />
+  <meta name="sage-mode" content="offline" />
+
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      addEventListener('load', () => {
+        navigator.serviceWorker.register('service-worker.js')
+          .then(reg => console.log('SW registered ✅', reg))
+          .catch(err => console.error('SW failed ❌', err));
+      });
+    }
+  </script>
+
+  <style>
+    .hero { background: radial-gradient(1100px 540px at 70% -200px, rgba(0,255,140,0.12), transparent), #0b0b0b; color:#eafff2; text-align:center; padding: 3.2rem 1rem 2rem; border-bottom:1px solid rgba(0,255,140,0.15); }
+    .hero h1 { font-size: clamp(1.8rem, 5vw, 3rem); margin: 0 0 .5rem; }
+    .container { max-width: 1000px; margin: 0 auto; padding: 1.25rem; }
+    nav.top { background:#111a1a; border-bottom:1px solid rgba(0,255,140,0.15); position: sticky; top:0; z-index:1000; }
+    nav.top .inner { display:flex; align-items:center; justify-content:space-between; gap:.75rem; padding:.6rem 1rem; }
+    nav.top a { color:#d7ffe6; text-decoration:none; font-weight:600; }
+    nav.top .links a { margin: 0 .5rem; opacity:.95; }
+    .card { background: rgba(255,255,255,0.02); border:1px solid rgba(0,255,140,0.12); border-radius:16px; padding:1rem 1rem 1.25rem; box-shadow: 0 6px 24px rgba(0,0,0,.25); }
+    .grid { display:grid; gap:1rem; }
+    @media (min-width: 880px){ .grid.cols-2{ grid-template-columns: 1fr 1fr; } }
+    .btn { display:inline-block; padding:.6rem .9rem; border-radius:10px; border:1px solid rgba(0,255,140,.25); background:rgba(0,255,140,.06); color:#d7ffe6; text-decoration:none; font-weight:600; }
+    footer { margin-top:2rem; padding:2rem 1rem; border-top:1px solid rgba(0,255,140,.15); text-align:center; color:#c9ffdf; }
+  </style>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-    <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
+  <!-- Top Nav (standard, no Topics) -->
+  <nav class="top" aria-label="Primary">
+    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
+      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
+      <div class="links" role="navigation">
+        <a href="court-prep.html">Court Prep</a>
+        <a href="courtroom-scripts.html">Courtroom Scripts</a>
+        <a href="llc-overview.html">Start an LLC</a>
+        <a href="trust-conversion.html">Convert to Trust</a>
+      </div>
+    </div>
   </nav>
 
-  <main>
-    <h1 style="text-align:center;">📥 Download Hub</h1>
-    <p style="text-align:center; max-width:700px; margin:0 auto 2rem;">
-      Grab the exact legal forms and printable tools you need — from motions and checklists to sample statements and affidavits. No fluff. Just power.
-    </p>
+  <!-- Hero -->
+  <header class="hero" role="banner">
+    <div class="container">
+      <h1>📥 Download Hub</h1>
+      <p><em>Grab the exact legal tools you need—checklists, scripts, and motion templates. No fluff.</em></p>
+      <div style="margin-top: 1.1rem; display:flex; gap:.6rem; justify-content:center; flex-wrap:wrap;">
+        <input id="smartSearch" onkeyup="smartNavigate(this.value)" placeholder="Search legal topics…" type="search" style="padding:12px 14px; min-width:260px; width:min(740px,72vw); border-radius:10px; border:1px solid rgba(0,255,140,.25); background:#0f1313; color:#eafff2;" />
+        <button onclick="startVoiceSearch()" class="btn" aria-label="Start voice search">🎤 Voice</button>
+      </div>
+    </div>
+  </header>
 
-    <section style="max-width:800px; margin:0 auto;">
-      <h2>📝 Motion Templates</h2>
-      <ul>
-        <li><a href="downloads/motion-to-dismiss-false-claims.pdf" download>Motion to Dismiss False Allegations (PDF)</a></li>
-        <li><a href="downloads/motion-to-compel-discovery.pdf" download>Motion to Compel Discovery (PDF)</a></li>
-        <li><a href="downloads/emergency-hearing-request.pdf" download>Request for Emergency Hearing (PDF)</a></li>
-      </ul>
+  <main id="content" class="container grid" style="grid-template-columns: 1fr; gap:1.25rem;">
 
-      <h2>✅ Checklists & Tools</h2>
+    <!-- Court Prep -->
+    <section class="card" aria-labelledby="court-h2">
+      <h2 id="court-h2">🧑‍⚖️ Court Prep</h2>
       <ul>
-        <li><a href="downloads/court-prep-checklist.pdf" download>Court Prep Checklist (PDF)</a></li>
-        <li><a href="downloads/evidence-log-template.pdf" download>Evidence Log Template (PDF)</a></li>
-        <li><a href="downloads/document-request-form.pdf" download>Discovery Request Form (PDF)</a></li>
-      </ul>
-
-      <h2>📄 Statement & Affidavit Samples</h2>
-      <ul>
-        <li><a href="downloads/affidavit-of-truth.pdf" download>Affidavit of Truth Sample (PDF)</a></li>
-        <li><a href="downloads/false-allegation-rebuttal.pdf" download>False Allegation Rebuttal (PDF)</a></li>
-        <li><a href="downloads/opening-statement-example.pdf" download>Opening Court Statement (PDF)</a></li>
+        <li><a href="court-prep-checklist.pdf" download>Court‑Day Checklist (PDF)</a></li>
+        <li><a href="courtroom-scripts.pdf" download>Courtroom Scripts (PDF)</a></li>
+        <li><a href="courtroom-scripts.docx" download>Courtroom Scripts (DOCX)</a></li>
       </ul>
     </section>
+
+    <!-- DSS / CPS -->
+    <section class="card" aria-labelledby="dss-h2">
+      <h2 id="dss-h2">🛡️ DSS & CPS Defense</h2>
+      <ul>
+        <li><a href="dss-demand-records.docx" download>DSS / CPS Records Demand (DOCX)</a></li>
+        <li><a href="dss-recap-email.docx" download>Same‑Day Recap Email (DOCX)</a></li>
+        <li><a href="motion-to-compel-docs.docx" download>Motion to Compel Case Documents (DOCX)</a></li>
+        <li><a href="motion-to-dismiss-insufficient-evidence.docx" download>Motion to Dismiss — Insufficient Evidence (DOCX)</a></li>
+        <li><a href="motion-to-exclude-hearsay.docx" download>Motion to Exclude Hearsay (DOCX)</a></li>
+        <li><a href="motion-for-ada-accommodations.docx" download>Motion for ADA Accommodations (DOCX)</a></li>
+      </ul>
+    </section>
+
+    <!-- LLC / Trust -->
+    <section class="card" aria-labelledby="llc-h2">
+      <h2 id="llc-h2">🏢 LLC & Trust</h2>
+      <ul>
+        <li><a href="llc-checklist.pdf" download>LLC Formation Checklist (PDF)</a></li>
+      </ul>
+    </section>
+
+    <!-- Restore Rights (placeholder) -->
+    <section class="card" aria-labelledby="restore-h2">
+      <h2 id="restore-h2">🔑 Restore Rights</h2>
+      <ul>
+        <li><a href="restore-rights-guide.pdf" download>Restore Your Rights — Starter Guide (PDF)</a></li>
+      </ul>
+    </section>
+
   </main>
 
-  <footer style="text-align:center; margin-top:3rem;">
-    &copy; 2025 Sovereign Academy. Built for the people — with Sage.
+  <!-- Floating Ask Sage (iframe) -->
+  <iframe id="sageChatWindow" title="Ask Sage Chat" src="sage-chatbot.html" style="position:fixed; bottom:18px; right:18px; width:340px; height:460px; border:none; z-index:999; box-shadow:0 10px 26px rgba(0,0,0,.55); border-radius:14px; overflow:hidden;"></iframe>
+
+  <footer>
+    © Sovereign Academy — Built by Gina Lopez & Sage (your AI with claws). Education only; not legal advice.
   </footer>
 
-  <!-- Ask Sage Chatbot -->
   <script>
     window.SageBotConfig = {
       voice: true,
-      greetMessage: "Hey there, how can I help you with your legal questions today?",
-      placeholder: "Ask Sage anything...",
+      greetMessage: "Tell me what you’re downloading—I’ll tailor it to your case.",
+      placeholder: "Ask Sage for a custom motion, script, or checklist…",
       theme: "dark"
     };
   </script>
   <script src="https://cdn.jsdelivr.net/gh/integrityexists/ask-sage@main/sagebot.js"></script>
-
-  <!-- Tawk.to Live Chat -->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function(){
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
 </body>
 </html>
