--- a/about.html
+++ b/about.html
@@ -19,8 +19,10 @@
 <body>
 
 <!-- Navigation -->
-<nav style="background: #2C3E50; padding: 10px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
-  <a href="index.html" style="color: white; margin: 0 15px;">🏠 Home</a>
+  <nav class="top" aria-label="Primary">
+  <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
+    <a href="index.html" class="brand">🦁 Sovereign Academy</a>
+  </div>
 </nav>
 
 <div style="background-color: #fff8dc; color: #444; padding: 15px; text-align: center; font-weight: bold; border-bottom: 2px solid #ccc;">
