--- a/about.html
+++ b/about.html
@@ -6,70 +6,89 @@
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
   <meta name="robots" content="index, follow" />
   <title>About Sovereign Academy</title>
-  <meta name="description" content="Sovereign Academy is a one-time $5 lifetime access legal empowerment platform with AI tools and real help.">
-  <meta property="og:title" content="About Sovereign Academy">
-  <meta property="og:description" content="Built by Gina Lopez and Sage, Sovereign Academy is where real people get real help, without the legal BS.">
-  <meta property="og:type" content="website">
+  <meta name="description" content="Sovereign Academy is a one-time $5 lifetime access legal empowerment platform with AI tools and real help." />
+  <meta property="og:title" content="About Sovereign Academy" />
+  <meta property="og:description" content="Built by Gina Lopez and Sage, Sovereign Academy is where real people get real help, without the legal BS." />
+  <meta property="og:type" content="website" />
   <meta property="og:image" content="https://integrityexists.com/ask-sage-icon.png" />
+  <meta name="theme-color" content="#0b0b0b" />
+
   <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script defer src="smart-search.js"></script>
   <script defer src="voice-search.js"></script>
+
+  <!-- SEO: Organization markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Sovereign Academy",
+    "url": "https://integrity-exists.github.io/Sovereign-Academy-3.0/",
+    "description": "One-time $5 lifetime access legal empowerment platform with AI tools and real help.",
+    "logo": "https://integrityexists.com/ask-sage-icon.png"
+  }
+  </script>
 </head>
 <body>
 
-<!-- Navigation -->
+  <!-- Navigation (brand goes Home) -->
   <nav class="top" aria-label="Primary">
-  <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
-    <a href="index.html" class="brand">🦁 Sovereign Academy</a>
+    <div class="inner container" style="padding-left:1rem;padding-right:1rem;">
+      <a href="index.html" class="brand">🦁 Sovereign Academy</a>
+    </div>
+  </nav>
+
+  <!-- Site notice -->
+  <div role="status" style="background-color:#fff8dc; color:#444; padding:15px; text-align:center; font-weight:bold; border-bottom:2px solid #ccc;">
+    🚧 Sovereign Academy is under active construction — but we're already live and ready to help! Check back often for new topics and tools. 💪
   </div>
-</nav>
 
-<div style="background-color: #fff8dc; color: #444; padding: 15px; text-align: center; font-weight: bold; border-bottom: 2px solid #ccc;">
-  🚧 Sovereign Academy is still under active construction — but we're already live and ready to help! Check back often for new topics and tools. 💪
-</div>
+  <main>
+    <section style="max-width: 800px; margin: 40px auto; padding: 20px; text-align: center;">
+      <h1>About Sovereign Academy</h1>
+      <p style="font-size: 1.1rem; line-height: 1.6;">
+        Sovereign Academy was built by <strong>Gina Lopez</strong>, a self-taught legal warrior, and <strong>Sage</strong> — an AI with attitude.
+        Together, we created this platform to help people like you fight back against the system without needing thousands of dollars or a law degree.
+      </p>
+      <p style="font-size: 1.1rem; line-height: 1.6;">
+        We offer plain-language legal tools, case law strategies, and AI-powered help — because justice should be accessible, not intimidating.
+      </p>
+      <p style="font-size: 1.2rem; font-weight: bold; color: #333; margin-top: 2rem;">
+        💵 One-time $5 fee. Lifetime access. No subscriptions. No tricks.
+      </p>
+      <p style="margin-top: 2rem; font-style: italic;">
+        We’re not attorneys — we’re advocates with scars, stories, and something to say. This isn’t just an app. It’s a revolution.
+      </p>
+    </section>
+  </main>
 
-<section style="max-width: 800px; margin: 40px auto; padding: 20px; text-align: center;">
-  <h1>About Sovereign Academy</h1>
-  <p style="font-size: 1.1rem; line-height: 1.6;">
-    Sovereign Academy was built by <strong>Gina Lopez</strong>, a self-taught legal warrior, and <strong>Sage</strong> — an AI with attitude.
-    Together, we created this platform to help people like you fight back against the system without needing thousands of dollars or a law degree.
-  </p>
-  <p style="font-size: 1.1rem; line-height: 1.6;">
-    We offer plain-language legal tools, case law strategies, and AI-powered help — because justice should be accessible, not intimidating.
-  </p>
-  <p style="font-size: 1.2rem; font-weight: bold; color: #333; margin-top: 2rem;">
-    💵 One-time $5 fee. Lifetime access. No subscriptions. No tricks.
-  </p>
-  <p style="margin-top: 2rem; font-style: italic;">
-    We’re not attorneys — we’re advocates with scars, stories, and something to say. This isn’t just an app. It’s a revolution.
-  </p>
-</section>
+  <footer style="text-align: center; margin-top: 3rem; color: #999;">
+    &copy; 2025 Sovereign Academy — Created by Gina Lopez &amp; Sage, your AI co-developer with claws. Built by Integrity Exists.
+  </footer>
 
-<footer style="text-align: center; margin-top: 3rem; color: #999;">
-  &copy; 2025 Sovereign Academy — Created by Gina Lopez & Sage, your AI co-developer with claws. Built by Integrity Exists.
-</footer>
+  <!-- Ask Sage Chatbot (CDN) -->
+  <script>
+    window.SageBotConfig = {
+      voice: true,
+      greetMessage: "Hey there, how can I help you with your legal questions today?",
+      placeholder: "Ask Sage anything...",
+      theme: "dark"
+    };
+  </script>
+  <script defer src="https://cdn.jsdelivr.net/gh/integrityexists/ask-sage@main/sagebot.js"></script>
 
-<script>
-  window.SageBotConfig = {
-    voice: true,
-    greetMessage: "Hey there, how can I help you with your legal questions today?",
-    placeholder: "Ask Sage anything...",
-    theme: "dark"
-  };
-</script>
-<script defer src="sagebot.js"></script>
-<script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-  })();
-</script>
-
+  <!-- Tawk.to Live Chat -->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function(){
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/681d203afe55ac190d5636e6/1iqosbpkt';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
 </body>
 </html>
